3rd party libraries are now installed in the install phase
`make install` now requires `sudo`

--- a/tools/intergen/tool/CMakeLists.txt
+++ b/tools/intergen/tool/CMakeLists.txt
@@ -7,4 +7,10 @@ include_directories(
 
 add_executable(intergen intergen.cc)
 target_link_libraries(intergen intergen_cppgen intergen_model intergen_utils pugixml)
-install(TARGETS intergen RUNTIME DESTINATION bin)
+install(
+  TARGETS intergen 
+  RUNTIME DESTINATION bin 
+  PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
+    GROUP_READ GROUP_WRITE GROUP_EXECUTE
+    WORLD_READ WORLD_EXECUTE
+)
