--- a/src/appMain/CMakeLists.txt
+++ b/src/appMain/CMakeLists.txt
@@ -200,12 +200,17 @@ if (${QT_HMI})
 endif ()
 
 # Install rules
-install(TARGETS ${PROJECT} DESTINATION bin)
+install(TARGETS ${PROJECT} 
+        DESTINATION bin 
+        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE 
+          GROUP_READ GROUP_WRITE GROUP_EXECUTE 
+          WORLD_READ WORLD_EXECUTE)
 install(
   FILES log4cxx.properties audio.8bit.wav test.txt smartDeviceLink.ini
     hmi_capabilities.json sdl_preloaded_pt.json
     ${CMAKE_SOURCE_DIR}/mycert.pem ${CMAKE_SOURCE_DIR}/mykey.pem
   DESTINATION bin
+  PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ GROUP_WRITE WORLD_READ
 )
 
 if (${WEB_HMI})
@@ -216,14 +221,14 @@ elseif (${QT_HMI})
   if (CMAKE_SYSTEM_NAME STREQUAL "QNX")
     install(FILES start-qml.sh DESTINATION bin
       PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
-        GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+        GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
   endif ()
   install(FILES ${CMAKE_CURRENT_BINARY_DIR}/start_hmi.sh DESTINATION bin
     PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
-      GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+      GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
 endif ()
 if (CMAKE_SYSTEM_NAME STREQUAL "QNX")
   install(FILES init_policy.sh DESTINATION bin
     PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
-      GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+      GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
 endif ()
